# janitor-stuff

./: .gitignore  README.md  build.ts  package.json
plugins/: userscript.ts
src/: chat.ts  disableLogger.ts  global.d.ts  global2.d.ts  hiddengems.ts  hooker.ts  index.ts  initState.ts  loader.ts  search.ts  tts.ts  util.ts
tts/: main.py  pyproject.toml
